--- a/styles/fabrique.css
+++ b/styles/fabrique.css
@@ -116,7 +116,7 @@ span {
 
 /* baniere */
 .badiere{
-    background-image: url(Images/baniere1.png);
+    background-image: url(../Images/baniere1.png);
     background-size: contain;
     background-repeat: no-repeat;
 
@@ -124,11 +124,12 @@ span {
 .badiere h1{
     font-weight: bolder;
     font-size: 50px;
+    color: #FFFFFF;
     text-align: center;
-    /* padding-left: 400px; */
+    /* margin-left: 400px; */
     padding-top: 200px;
-    padding-bottom: 100px;
-    /* background-image: url("assets/backfab.png"); */
+    padding-bottom: 200px;
+    background-image: url(../Images/2.png);
     width: 500px;
 }
 .fab{
@@ -141,16 +142,29 @@ span {
 }
 .fableft h1, .fabright h1{
     color: white;
-    margin-top: 0;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 .fab hr{
     margin-bottom: 50px;
     margin-top: 70px;
     background: #FFFFFF;
-    width: 10px;
+    width: 7px;
     height: 300px;
 }
-
+.fableft p{
+    padding-right: 50px;
+}
+.fableft p, .fabright p{
+    width: 400px;
+    line-height: 2.2;
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 0;
+    color: #FFFFFF;
+    padding-left: 50px;
+    line-break: auto;
+}
 /* petite histoire */
 
 .histoire{
@@ -170,19 +184,25 @@ span {
     text-align: center;
 }
 .histo_cont{
+    padding-left: 100px;
     display: flex;
+    background: #FAFAFA;
 }
 .histo_cont img{
     width: 500px;
+    padding-top: 20px;
+    padding-bottom: 70px;
 }
 .histo_cont{
     margin-top: 50px;
 }
 .histotxt p{
     width: 500px;
-    line-height: 2.1;
+    line-height: 2.5;
+    font-weight: bold;
 }
 .histotxt{
+    padding-top: 30px;
     margin-top: 20px;
     padding-right: 20px;
     padding-left: 20px;
@@ -193,6 +213,7 @@ span {
     flex-direction: row;
     justify-content: space-around;
 }
+
 .titre1 {
     margin-top: 1.88rem;
     padding: 1.25rem;
@@ -411,7 +432,7 @@ p {
 /* nos chiffres */
 
 .chiffres__section5 {
-    background-image: url(Images/1.png);
+    background-image: url(../Images/Group1.jpg);
     background-size: auto;
     background-repeat: no-repeat;
     background-position: center;
@@ -521,7 +542,7 @@ p {
 /* footer */
 
 footer {
-    background-image: url(Images/footer.png);
+    background-image: url(../Images/footer.png);
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center;
