--- a/styles/home.css
+++ b/styles/home.css
@@ -1,70 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Manrope:wght@200&family=Montserrat:wght@300&display=swap');
 
-/*stockage des couleurs depuis figma*/
-
 :root {
-    --title-color: #CE0033;
-    --background-firstsection: #FAFAFA;
-    --white: #FFFFFF;
-    --Black: #000000;
+    --title-color : #CE0033;
+    --background-firstsection : #FAFAFA;
+    --white : #FFFFFF;
+    --Black : #000000;
     /* text configuration */
-    --nav-font: 'inter';
+    --nav-font : 'inter';
 }
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-/* hedear */
+
+/*Header -----------------------------------*/
+
 header {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    font-size: 20px;
-    background-color: var(--white);
-    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.25);
-    padding: 20px 25px;
 }
-.nav__item {
+
+.img_header {
+    width: 120px;
+    height: 120px;
+    object-fit: contain;
+}
+
+header a {
     text-decoration: none;
     color: black;
-    /* Vous pouvez ajuster la police comme vous le souhaitez */
-    position: relative;
-    /* Position relative pour le pseudo-élément */
+    position: relative; /* Position relative pour le pseudo-élément */
     transition: color 0.3s;
-    font-family: var(--nav-font);
-    /* Animation de couleur au survol */
+    font-family: var(--nav-font); /* Animation de couleur au survol */
     font-size: 22px;
     margin-right: 30px;
 }
-.nav__item::after {
-    content: '';
-    /* Le contenu est vide, car nous créons une ligne */
-    position: absolute;
-    /* Position absolue pour le pseudo-élément */
-    left: 0;
-    /* Début de la ligne */
-    bottom: -45px;
-    /* Distance de la ligne par rapport au texte */
-    width: 100%;
-    /* La ligne s'étend sur toute la largeur du lien */
-    height: 4px;
-    /* Épaisseur de la ligne */
-    background-color: var(--title-color);
-    /* Couleur de la ligne (vous pouvez la personnaliser) */
-    transform: scaleX(0);
-    /* Échelle horizontale initiale pour cacher la ligne */
-    transition: transform 0.3s;
-    /* Animation de l'échelle au survol */
+
+header a::after {
+    content: ''; /* Le contenu est vide, car nous créons une ligne */
+    position: absolute; /* Position absolue pour le pseudo-élément */
+    left: 0; /* Début de la ligne */
+    bottom: -49px; /* Distance de la ligne par rapport au texte */
+    width: 100%; /* La ligne s'étend sur toute la largeur du lien */
+    height: 4px; /* Épaisseur de la ligne */
+    background-color: var(--title-color); /* Couleur de la ligne (vous pouvez la personnaliser) */
+    transform: scaleX(0); /* Échelle horizontale initiale pour cacher la ligne */
+    transition: transform 0.3s; /* Animation de l'échelle au survol */
 }
 
 .nav__item:hover,
 .nav__item:focus {
     color: var(--title-color);
-    border-bottom: solid 5px #CE0033;
 }
 
-.nav__item:focus::after {
+header a:focus::after {
     transform: scaleX(1);
 }
 
@@ -72,8 +65,15 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 2rem;
     align-items: center;
+    gap: 2rem;
+}
+
+.header__end select {
+    border: none;
+    background: none;
+    font-size: 1.25rem;
+    color:#CE0033;
 }
 
 .login-button {
@@ -88,48 +88,538 @@ header {
     font-size: 1.25rem;
 }
 
-.login-button a {
-    text-decoration: none;
+/*body ----------------------------------------------------*/
+
+.section__1 {
+    background-image: url(../Images/bg-section-1.png);
+    width: 100%;
+    height: 720px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.elem-section-1 {
+    width: 100%;
+    max-width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 115px 180px;
+}
+
+.elem-section-1 h1 {
+    font-size: 70px;
+    color: #FAFAFA;
+    margin-bottom: 30px;
+}
+
+.elem-section-1 p {
+    font-size: 22px;
+    color: #FAFAFA;
+    margin-bottom: 30px;
+}
+
+.elem-section-1 button {
+    background-color: var(--title-color);
     color: var(--white);
-}
-
-.logo {
-    height: 4.5rem;
-    width: 9.36rem;
-    margin-left: 2.5rem;
-    margin-top: 0.63rem;
-}
-
-span {
+    border: none;
+    padding: 23px 33px;
+    border-radius:9999px;
+    cursor: pointer;
     font-family: var(--nav-font);
     font-size: 1.25rem;
+    font-weight: bold;
 }
 
-.header__end i {
-    color: var(--title-color);
-    cursor: pointer;
-    margin-left: 20px;
-}
-
-/* contenaire -------------------------------------------------------------------------------------------------- */
-.container{
-    margin-top: 0;
-}
-/* baniére */
-.baniere{
-    background: url("Images/baniere1.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-.textban{
+.section__2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    justify-content: center;
     padding-top: 100px;
-    width: 700px;
-    padding-left: 100px;
+    gap: 70px;
 }
-.textban h1{
-    font-size: 50px;
+
+.img-section2 {
+    width: 500px;
+    height: 600px;
+    object-fit: cover;
+    border-radius: 40px;
+}
+.text-section2 {
+    max-width: 50%;
+}
+
+.text-section2 h1 {
+    font-size: 40px;
+    color: #CE0033;
+    margin-bottom: 30px;
+}
+
+.text-section2 p {
+    font-size: 23px;
+    line-height: 40px;
+}
+
+/*section4 -------------------------------------------------------------*/
+
+.nouvelle  {
+    position: absolute;
+    background: var(--primary-color3);
+    align-items: center;
+    margin-bottom: 50px;
+    width: 99%;
+    height: 160vh;
+    justify-content: center; 
+   }
+   .nouvelle .container  {
+    position: relative;
+    background: var(--primary-color3);
+    padding: 9vh 93vh ;
+   }
+  
+  
+   
+  .nouvelle .peda-plier { 
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vh; 
+    text-align: left;
+    display: flex;
+    width: 5%;  
+    margin:0 1vh;
+  
+   }
+   .nouvelle .peda-plier {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vh; 
+    text-align: left;
+    display: flex;
+    width: 5%;  
+    margin:0 1vh;
+  
+   }
+            
+  .nouvelle .peda-plier .box-plier {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.3vh; 
+    width:58vh;
+    height: 38vh;
+    text-align: left;
+    position: relative;
+    margin:0 1vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+   }
+   .nouvelle  h2{
+    font-size: 4vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+    color: var(--title-color);
+    position: relative;
+    padding: 12vh 0;
+    width: 20rem;
+  
+  }
+            
+  .nouvelle .row {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow', sans-serif;
+   }
+  
+  .nouvelle .row  .actu{
+    font-size: 6vh;
     font-weight: bolder;
+    font-family: cursivex ;
+    color: var(--title-color);
+    position: relative;
+    padding: 1vh 0;
+    padding-left: 200px;
+  margin-left: -44rem;
+  
+  }
+  
+  .nouvelle .row  .date{
+    font-size: 3vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+    background: var(--title-color);
+    position: absolute;
+  margin-left: 13rem;
+  border-bottom-left-radius: 6rem;
+  border-bottom-right-radius: 6rem;
+  color: #ffffff;
+  height: 3rem;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  bottom: 11rem;
+  padding: 5px 6px;
+  
+  }
+            
+  .nouvelle .peda-plier .date p {
+     padding-top: 8px;
+    position: relative;
+    font-size: 12px; 
+    font-family: fantasy;
+    bottom: 12px;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+  
+   }
+   
+  
+            
+  .nouvelle .peda-plier .box-plier .numb {
+     
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-align: left;    
+    position: relative;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow', sans-serif;
+    top: 2vh;
+  
+   }
+  
+   .nouvelle .peda-plier .box-plier .numb  img{
+     
+  width: 37vh;
+  border-radius: 10px;
+  height: 13rem;
+   
+   }
+            
+  .nouvelle .peda-plier .box-plier h3 {
+     padding-top: 10px;
+     padding-bottom: 10px;
+    position: relative;
+    font-size: 2vh; 
+    /* font-family: fantasy; */
+    top: 1vh;
+  
+   }
+  
+            
+  .nouvelle .peda-plier .box-plier .desc {
+     padding-bottom: 20px;
+    position: relative;
+    font-size: 2vh; 
+    font-family: fantasy;
+    top: 1px;
+    color: #464545;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   }
+   .nouvelle  .plus{
+    margin-top: 50px;
+    font-size: 3vh;
+    display: flex;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+    color: #880f0f;
+    position: absolute;
+    padding: 2vh 122px;
+    width: 30rem;
+    right: 0;
+  
+  }
+  
+  .nouvelle  .grid-container {
+    display: grid;
+    grid-template-columns: 44% 44% ;
+    padding: 20px 70px;
+    justify-content: center;
+    align-items: center;
+  }
+  .nouvelle  .grid-item {
+    background-color: var(--primary-color);
+    padding: 20px;
+    font-size: 22px;
+    text-align: left;
+    margin: 2rem;
+    display: flex;
+  }
+  
+  
+  .nouvelle .grid-container  .date{
+    font-size: 5vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+  margin-left: 1rem;
+  
+  color: #ffffff;
+  height: 3rem;
+  align-items: center;
+  text-align: left;
+  justify-content: center;
+  padding: 18px 6px;
+  
+  }
+            
+  .nouvelle .grid-container .date p {
+     
+    position: relative;
+    font-size: 12px; 
+    font-family: fantasy;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+  
+   }
+  
+          
+  .nouvelle .grid-container .next{
+     
+    position: relative;
+    font-size: 22px; 
+    font-family: fantasy;
+    bottom: 12px;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    width:18rem   ;
+    padding: 12px 28px;
+  
+  
+   }
+   .nouvelle .grid-container .next h3{
+     
+    position: relative;
+    font-size: 22px; 
+    font-family: fantasy;
+    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode',Arial, sans-serif;
+    width: 18rem   ;
+  
+   }
+   .nouvelle .grid-container h3 i{
+     
+    font-size: 21px; 
+    color: #ffffff;
+  
+   }
+   .nouvelle .grid-container  .i{
+    font-size: 21px; 
+    font-size: 52px;
+    color: #ffffff;
+    margin: 3rem 2rem;
+  
+   }
+  
+   .nouvelle   .actu2{
+    font-size: 4vh;
+    font-family: cursivex ;
+    color: var(--primary-color);
+    position: relative;
+    padding:0 198px ;
+    padding-top: 4rem;
+  
+  }
+  .nouvelle  .decouve{
+    font-size: 3vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+    color: var(--primary-color);
+    position: absolute;
+    padding: 220px 12px;
+    width: 20rem;
+    right: 0;
+    bottom: 0;
+  
+  }
+.section__4 {
+    margin-top: 600px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
+
+.trait {
+    width: 70px;
+    height: 3px;
+    background-color: white;
+}
+
+.card-section4 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.title-div {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+.title-section4 {
+    font-size: 40px;
+    color: #CE0033;
+    margin-left: 90px;
+    margin-top: 100px;
+}
+
+.div-left h1 {
+    font-size: 40px;
+}
+
+.div-left p {
+    font-size: 18px;
+}
+
+.card-s4 {
+    display: flex;
+    flex-direction: row;
+    max-width: 40%;
+    justify-content: space-around;
+    background-color: #CE0033;
+    color: #FAFAFA;
+    align-items: center;
+    padding: 30px 30px;
+    gap: 20px;
+    border-radius: 10px;
+}
+
+.div-right {
+    background-color: #FAFAFA;
+    padding: 30px 30px;
+    border-radius: 100%;
+}
+
+.div-middle {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.div-middle p {
+    font-size: 28px;
+}
+
+
+/*section--------------------------------------------------------------9*/
+.title-section9 {
+    text-align: center;
+    font-size: 45px;
+    color: #CE0033;
+    padding-bottom: 80px;
+    margin-top: 120px;
+}
+
+.img-form {
+    width: 40px;
+    height: 40px;
+}
+
+.general {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.card {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    margin-bottom: 60px;
+}
+
+.card h1 {
+  font-size: 40px;
+}
+
+.field {
+    font-family: var(--nav-font);
+    color:darkgray;
+    text-align: start;
+    margin-top: 20px;
+    margin-left: -7px;
+}
+
+.footer-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.button {
+    background-color: var(--title-color);
+    border-radius: 30px;
+    width: 150px;
+    padding: 10px 15px;
+    color: var(--white);
+    font-family:var(--nav-font);
+    margin-left: 230px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.type-text {
+    display: flex;
+    gap: 20px;
+}
+
+.type-text input {
+    flex-direction: row;
+    width: 260px;
+    padding: 25px 25px;
+    border-radius: 10px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.personnal-info input {
+    width: 260px;
+    padding: 25px 25px;
+    border-radius: 10px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.personnal-info {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+.section__7__block2 {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 60px;
+}
+
+
+
+textarea {
+    width: 540px;
+    padding: 25px 25px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    margin-top: 30px;
+}
+
+.policy {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    gap: 15px;
+}
+
+.policy h2 {
+    font-family: var(--nav-font);
+    font-size: 15px;
+}
+
+.button-form {
+    background-color: var(--title-color);
+    color: var(--white);
+    width: 150px;
+    font-family: var(--nav-font);
+    font-size: 20px;
+    padding: 15px 20px;
+    border-radius: 30px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+
+
 
 
 /* footer */
