--- a/styles/home.css
+++ b/styles/home.css
@@ -318,7 +318,7 @@ header a:focus::after {
     font-size: 3vh;
     display: flex;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow';
-    color: #880f0f;
+    color: #CE0033;
     position: absolute;
     padding: 2vh 122px;
     width: 30rem;
@@ -495,8 +495,243 @@ header a:focus::after {
 .div-middle p {
     font-size: 28px;
 }
+.section__4 h4{
+    /* margin-top: 50px; */
+    font-size: 3vh;
+    padding-left: 1000px;
+    /* display: flex; */
+    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow';*/
+    color: #CE0033; 
+    /* position: absolute;
+    padding: 2vh 122px; */
+    /* text-align: right; */
+    /* align-items: center;
+    width: 30rem;
+    right: 0; */
+}
+/* decouverte */
+.evolution{
+    background:rgba(0,0,0,0.5)url("../Images/Decouverte.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode:darken;
+    padding: 80px;
+    padding-bottom: 300px;
+    color:white;
+}
+.evolution h2{
+    color: white;
+    font-weight: bolder;
+    font-size: 60px;
+}
+.evolution p{
+    font-size: 25px;
+    line-height: 1.7;
+}
+.triple_caisse{
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+    /* background: url(../Images/Group11.png); */
+    background: #CE0033;
+    /* opacity: 0.5; */
+    width: 800px;
+    height: 200px;
+    /* background-repeat: no-repeat; */
+    align-content: center;
+    position: relative;
+    width: 1098px;
+    bottom:110px;left: 150px;
+
+}
+.triple_caisse h3{
+    
+  font-size: 50px;
+  margin-bottom: 0;
+}
+.mini_caisse{
+    margin-top: 30px;
+    text-align: center;
+}
 
 
+
+/* formateurs -------------------------------------------------*/
+.formateurs  h2{
+    font-size: 4vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+    color: var(--title-color);
+    position: relative;
+    padding: 12vh 0;
+    width: 20rem;
+
+
+  }
+  .formateurs  .blog{
+
+    display: block;
+    align-items:start;
+    text-align:left;
+    justify-content: left;
+
+  }
+  .formateurs  .blog .actu2{
+    color: #CE0033;
+    display: block;
+    align-items:start;
+    text-align:left;
+    justify-content: left;
+    padding-bottom: 80px;
+
+  }
+  .next hr{
+    width: 200px;
+    height: 3px;
+    background: #000000;
+  }
+  .formateurs  .blog .actu2 hr{
+height: 5px;
+background: black;
+  }
+  .formateurs .row {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow', sans-serif;
+   }
+
+  .formateurs .row  .actu{
+    font-size: 4vh;
+    font-family: cursivex ;
+    color: var(--primary-color);
+    position: relative;
+    padding: 1vh 0;
+  margin-left: -44rem;
+
+  }
+
+
+  .formateurs  .grid-container {
+    gap: 5rem;
+    display: grid;
+    grid-template-columns: 34% 34% ;
+    /* padding: 10px 0px; */
+    justify-content: center;
+    align-items: center;
+    /* height: 20%; */
+  }
+  .formateurs  .grid-item {
+    /* background-color: white; */
+    padding: 50px 0;
+    font-size: 22px;
+    text-align: left;
+    margin-right: 100px;
+    display: flex;
+    border-radius: 12px;
+    /* border: #f0f0f0 solid 1px; */
+    box-shadow: 1px 10px 15px 1px rgba(0,0,0,0.1);
+  }
+
+
+  .formateurs .grid-container  .profil{
+    font-size: 5vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+  margin  : -6rem;
+
+  color:black;
+  height: 3rem;
+  align-items: center;
+  text-align: left;
+  justify-content: center;
+  padding: 1px 6px;
+
+  }
+
+  .formateurs .grid-container .profil img {
+  position: relative;
+  width: 10rem;
+  height: 13rem;
+  border-radius: 23px;
+
+   }
+.formateurs .grid-container .next{
+
+    position: relative;
+    font-size: 15px; 
+    font-family: fantasy;
+    bottom: 12px;
+    color:black;
+    font-family: Arial, Helvetica, sans-serif;
+    width:3rem;
+    padding: 12px 120px;
+   }
+   .formateurs .grid-container .next p{
+    width: 15rem;
+   }
+   .formateurs .grid-container .next h3{
+
+    position: relative;
+    font-size: 28px; 
+    font-family: fantasy;
+    color: #000000;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode',Arial, sans-serif;
+    width: 18rem   ;
+
+   }
+   .bouton-formateur{
+/* ;
+height: 50px;
+padding-top: 50px; */
+    width: 7rem;
+    position: absolute;
+    color: #e6e6e6;
+    margin-left: 14rem;
+    text-decoration: none;
+    font-size: 21px; 
+    background: #CE0033;
+    border-radius: 33px;
+    /* font-family: fantasy;
+    
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode',Arial, sans-serif;
+    
+     */
+    /* padding: 9px  20px;
+    right: 60px; */
+
+   }
+   .formateurs .grid-container h3{
+
+    font-size: 21px; 
+    color: #ffffff;
+
+   }
+   .formateurs .grid-container  .bar{
+      font-size: 52px;
+    background: #ff0d0d;
+    width: 1vh;
+    height: 9vh;
+    margin: -10vh -15vh;
+    z-index: 22;
+
+   }
+
+   .formateurs   .actu2{
+    font-size: 4vh;
+    font-family: cursivex ;
+    color: var(--primary-color);
+    position: relative;
+    padding:0 198px ;
+    padding-top: 4rem;
+
+  }
+  .formateurs  .decouve{
+    font-size: 3vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow';
+    color: var(--primary-color);
+    position: absolute;
+    padding: 220px 12px;
+    width: 20rem;
+    right: 0;
+    bottom: 0;
+
+  }
 /*section--------------------------------------------------------------9*/
 .title-section9 {
     text-align: center;
