--- a/styles/fabrique.css
+++ b/styles/fabrique.css
@@ -608,18 +608,295 @@ p {
     margin-top: 20px;
     margin-left: 200px;
 }
+.div3{
+    margin-right: 150px;
+}
 /*section voyager*/
 .voyager{
-    margin-top: 100px;
+    margin-top: 200px;
     margin-left: 10%;
+    margin-right: 30px;
 }
 .voyager img{
     width: 100%;
     height: 400px;
 }
 .voyager .container_voyager{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1px;
+}
+.container_voyager .p1{
+    margin-top: 50px;
+    margin-bottom: 100px;
+    color:  var(--title-color);
+    font-weight: bold;
+}
+.container_voyager strong{
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+.container_voyager p{
+   margin-left: 150px;
+}
+/*partie Recrutement*/
+.Recrutement{
+    margin-top: 150px;
+    margin-left: 100px;
+    margin-right: 30px;
+}
+.Recrutement h1{
+    text-align: center;
+    margin: 40px auto;
+    font-weight: bold;
+    color: var(--title-color);
+    font-size: 37px;
+}
+.Recrutement h2{
+    margin-top: 100px;
+    margin-left: -70px;
+    color: var(--title-color);
+}
+.Recrutement__container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+}
+.Recrutement__container img{
+    width: 80%;
+    height: 400px;
+}
+.Recrutement__container__2{
+    margin-right: 200px;
+}
+.Recrutement__container__2 p{
+    padding: 30px;
+    margin-left: -100px;
+}
+/*formulaire renseignement*/
+.formulaire_Recrutement{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 30px 2px;
+}
+.cart__formulaire_1{
+    background: #f9f4f4;
+    width: 570px;
+    border-radius: 20px;
+}
+.cart__formulaire_1 h3{
+    font-size: 25px;
+    color: #CE0033;
+    padding: 8px;
+}
+.cart__formulaire_1 .hr-top{
+    height: 1.5px;
+   background:#CE0033;
+}
+.hr{
+    height: 1.5px;
+    margin-top: 10px;
+    background: #CE0033;
+    width: 50px;
+    margin-left: 70px;
+}
+.formateur__ligne{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+}
+.cart__formulaire_1{
+    display: flex;
+    flex-direction: column;
+}
+.le_post{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 10px;
+}
+.le_post .titre_du_poste{
+    color: #CE0033;
+}
+.le_post .p__resume{
+    padding: 5px;
+    font-size: 15px;
+    margin-bottom: 2px;
+}
+.le_post .formulaire_carte{
+    margin-top: -2px;
+    margin-left: 12px;
+    background: #FFFFFF;
+    width: 150px;
+    border-radius: 20px;
+    text-align: center;
+    margin-bottom: 5px;
+    font-size: 15px;
+}
+.le_post .formulaire_carte p{
+    padding: 2px;
+}
+.le_post .formulaire_carte img{
+    width: 20px;
+    margin-right: 30px;
+}
+.Button__postuler{
+    align-items: center;
+    width: 150px;
+    margin-left: 28%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    height: 30px;
+    border-radius: 70px;
+    background: #CE0033;
+    color: #FFFFFF;
+    border: none;
+}
+.formateur_referent{
     display: flex;
     justify-content: space-between;
+    height: 55px;
+}
+.formulaire_Recrutement hr{
+    background: #CE0033;
+    color: #CE0033;
+    height: 1px;
+}
+.formateur_referent img{
+    width: 25px;
+    height: 25px;
+    margin-top: 10px;
+    margin-right: 20px;
+}
+.affiche_plus{
+    text-align: end;
+    margin-bottom: 25px;
+}
+/*forme cote droite*/
+.formulaire_2{
+    display: flex;
+    flex-direction: column;
+    columns: #f9f4f4;
+}
+.formulaire_2 .nom_prenom{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.nom_prenom input{
+    height: 35px;
+    width: 200px;
+    border: 2px solid  #fdebeb;
+    border-radius: 2px;
+}
+.tel_mail input{
+    margin-top: 15px;
+    height: 35px;
+    width: 200px;
+    border: 2px solid  #fdebeb;
+    border-radius: 2px;
+}
+.formulaire_2 .tel_mail{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.joindre_fichier{
+  margin-left: 70%;
+  color: var(--title-color);
+}
+.messages{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: -13%;
+}
+.formulaire_Recrutement .rejoindre{
+    border: none;
+    color: #ffffff;
+    background: #CE0033;
+    width: 100px;
+    height: 40px;
+    margin-top: 20px;
+    margin-left: 40px;
+    border-radius: 20px;
+    font-size: 20px;
+
+}
+.check{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    margin-left: -400px;
+}
+.required{
+    color: #000000;
+    margin-left: 2px;
+    margin-top: -2px;
+}
+/*ils en parle*/
+.ils_en_parle{
+    margin-top: 200px;
+}
+.ils_en_parle h1{
+    margin: 20px auto;
+    text-align: center;
+    justify-content: center;
+    color: var(--title-color);
+    font-size: 44px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+.maimouna, .thierno{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.ils_en_parles{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.ils_en_parles img{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+}
+.maimouna_text, .thierno_text{
+    margin-top: 10px;
+    color: #9b9a9e;
+}
+/*parteneria*/
+.partenariat{
+    margin-top: 100px;
+}
+.partenariat h2{
+    text-align: center;
+    color: var(--title-color);
+    font-size: 30px;
+    font-weight: bold;
+}
+.container_partenaria .logo_partenere{
+    width: 100px;
+    height: 100%;
+}
+.partenariat .container_partenaria{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 50px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+.partenariat .partenaria__row1{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 70px;
+}
+.partenariat .partenaria__row2{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 70px;
 }
 /* footer */
 
@@ -675,7 +952,7 @@ footer {
 .footer__top__middle__left nav {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .footer__top__middle__left nav a {
